@@ -59,7 +59,8 @@ has project => (
     lazy    => 1,
     default => sub {
         my $self = shift;
-        try { $self->plan->project } || do {
+        try { $self->plan->project } catch {
+            die $_ if $_->ident eq 'parse';
             # Try to extract a project name from the registry.
             my $engine = $self->engine;
             hurl status => __ 'Database not initialized for Sqitch'
@@ -70,7 +71,7 @@ has project => (
                 'Use --project to select which project to query: {projects}',
                 projects => join __ ', ', @projs,
             ) if @projs > 1;
-            $projs[0];
+            return $projs[0];
         };
     },
 );
